refactor: Align project structure with Khaos conventions
- Restructure folders: src/, tests/, benchmarks/, scripts/
- Add Directory.Build.props with MinVer versioning and package metadata
- Add build scripts (Build.ps1, Clean.ps1, Test.ps1, Pack.ps1, Get-Version.ps1)
- Update project files with IsPackable and package properties
- Rename LICENSE to LICENSE.md and update format
- Update README.md with Related Packages section and license link
- Update .gitignore to exclude artifacts and BenchmarkDotNet output
- Remove previously committed benchmark artifacts

--- a/tests/Khaos.JEX.Tests/Khaos.JEX.Tests.csproj
+++ b/tests/Khaos.JEX.Tests/Khaos.JEX.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Khaos.JEX\Khaos.JEX.csproj" />
+    <ProjectReference Include="..\..\src\Khaos.JEX\Khaos.JEX.csproj" />
   </ItemGroup>
 
 </Project>
