--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ bld/
 *.snupkg
 .nuget/
 packages/
+artifacts/
 
 # Test results
 [Tt]est[Rr]esult*/
@@ -32,6 +33,9 @@ packages/
 *.trx
 *.coverage
 *.coveragexml
+
+# BenchmarkDotNet
+BenchmarkDotNet.Artifacts/
 
 # JetBrains Rider
 .idea/
