--- a/benchmarks/Khaos.JEX.Benchmarks/Khaos.JEX.Benchmarks.csproj
+++ b/benchmarks/Khaos.JEX.Benchmarks/Khaos.JEX.Benchmarks.csproj
@@ -1,15 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>Khaos.JEX</RootNamespace>
-    <AssemblyName>Khaos.JEX</AssemblyName>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.15.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Khaos.JEX\Khaos.JEX.csproj" />
   </ItemGroup>
 
 </Project>
